...
        visibilityTime: 3000,
      });
    }
  };

  return (
    <View testID="product-comments">
      {canPublish ? (
        <View style={styles.form} testID="product-comment-form">
          <TextInput
            style={styles.input}
            value={content}
            onChangeText={setContent}
...
